recursion.cons.reverse.Reverse.scala.error
Erreur de compilation :
Reverse:3: error: illegal start of simple expression
  reverseh(l,[])
             ^Reverse:4: error: ')' expected but '}' found.
}
^